--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.1.1",
     "@nestjs/microservices": "^8.1.1",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.1.2",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.1.2",
     "nest-winston": "^1.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
