--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.1.2",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.2",
     "nest-winston": "^1.6.1",
     "reflect-metadata": "^0.1.13",
