--- a/docs/restaurant-api-v0.1.yaml
+++ b/docs/restaurant-api-v0.1.yaml
@@ -38,15 +38,31 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              example:
-                name: restaurant 1-3
-                picture: url
-                address: lhr
-                openingHours:
-                  dayOfweek: 1
-                  open: 540
-                  close: 1050
+              allOf:
+                - $ref: '#/components/schemas/RestaurantBasic'
+                - type: object
+                  properties:
+                    openingHours:
+                      type: array
+                      items:
+                        properties:
+                          dayOfWeek:
+                            type: number
+                            example: 1
+                            minimum: 0
+                            maximum: 6
+                          open:
+                            type: number
+                            example: 540
+                            minimum: 0
+                            maximum: 1440
+                          close:
+                            type: number
+                            example: 1050
+                            minimum: 0
+                            maximum: 1440
+
+
       responses:
         '200':
           description: Successful response
@@ -80,15 +96,29 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              example:
-                name: restaurant 1-3
-                picture: url
-                address: lhr
-                openingHours:
-                  dayOfweek: 1
-                  open: 540
-                  close: 1050
+              allOf:
+                - $ref: '#/components/schemas/RestaurantBasic'
+                - type: object
+                  properties:
+                    openingHours:
+                      type: array
+                      items:
+                        properties:
+                          dayOfWeek:
+                            type: number
+                            example: 1
+                            minimum: 0
+                            maximum: 6
+                          open:
+                            type: number
+                            example: 1
+                            minimum: 540
+                            maximum: 1440
+                          close:
+                            type: number
+                            example: 1050
+                            minimum: 0
+                            maximum: 1440
       parameters:
         - name: restaurantId
           in: path
